[package]
name = "landing"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = [
    "configurable_error_handler",
    "bevy_ui_debug",
    "webgpu",
    # test
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
] }
bevy_asset_loader = { version = "0.23.0", features = ["progress_tracking"] }
bevy_enhanced_input = "0.12.0"
bevy_skein = "0.2.0"
# bevy_seedling = { git = "https://github.com/CorvusPrudens/bevy_seedling.git", rev = "28d43de0ca30ab3b6050fcc03943359f6e28535d" }
iyes_progress = "0.14.0"
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
vleue_kinetoscope = "0.4.1"
noiz = "0.2.0"
bevy_seedling = "0.4.0"
bevy-inspector-egui = "0.31.0"
avian3d = "0.3.0"
itertools = "0.14.0"
rand = "0.8"

# [target.wasm32-unknown-unknown.dependencies]
# getrandom = { version = "0.3", features = ["wasm_js"] }

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
